@@ -2,6 +2,7 @@
 
 	* Apply Christian's patch:
 	  to/from bytearray methods plus refactoring
+	* Add NMSBoxes command
 	* Add col and row command to MATRIX function
 	* Add forwardWithNames command to READNET function
 	* Add getUnconnectedOutLayers command to READNET function
